e-identification-test-sp/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-identification-test-sp
spec:
  selector:
    matchLabels:
      app: e-identification-test-sp
  replicas: 1
  template:
    metadata:
      labels:
        app: e-identification-test-sp
    spec:
      containers:
        - name: e-identification-test-sp
          image: 585109340096.dkr.ecr.eu-west-1.amazonaws.com/e-identification-test-sp:dev
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "openssl req -x509 -newkey rsa:3072 -nodes -keyout /etc/pki/tls/private/tls-key.pem -out /etc/pki/tls/certs/tls-cert.pem -days 1800 -subj /CN=oidctest.tunnistus.fi"]
          imagePullPolicy: Always
          ports:
            - containerPort: 443
          volumeMounts:
            - name: testsp-secret
              mountPath: /data00/secrets
              readOnly: true
      volumes:
        - name: testsp-secret
          secret:
            secretName: e-identification-testsp-keys
            defaultMode: 0777
