e-identification-test-sp/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-identification-test-sp
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
  type: NodePort
  selector:
    app: e-identification-test-sp
